fixed styles crash

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
+<div>
 
   <app-navbar></app-navbar>
   <app-carousel></app-carousel>
