--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,25 +6,24 @@
   <br>
   <div class="row">
     <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
+      <p class="text-center"><strong>Fantastic Todo</strong></p><br>
       <a href="#demo" data-toggle="collapse">
-        <img src="https://www.w3schools.com/bootstrap/bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="../assets/fantastic_todo.png" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo" class="collapse">
-        <p>Guitarist and Lead Vocalist</p>
-        <p>Loves long walks on the beach</p>
-        <p>Member since 1988</p>
+        <p><strong>Demo:</strong> <a href="https://fantastictodo.herokuapp.com/">Show</a></p>
+        <p><strong>Source:</strong> <a href="https://github.com/MusheghKh/TODO">Show</a></p>
+        <p><strong>Developed with <a href="https://java.com">Java 8</a> and <a href="https://spring.io/">Spring Framework</a></strong></p>
       </div>
     </div>
     <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
+      <p class="text-center"><strong>Mini programming language</strong></p><br>
       <a href="#demo2" data-toggle="collapse">
-        <img src="https://www.w3schools.com/bootstrap/bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="../assets/mini_lang.png" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo2" class="collapse">
-        <p>Drummer</p>
-        <p>Loves drummin'</p>
-        <p>Member since 1988</p>
+      <p><strong>Source:</strong> <a href="https://github.com/MusheghKh/TODO">Mini Programming Language</a></p>
+      <p><strong>This is mini programming language developed by me using <a href="https://java.com">Java</a></strong></p>
       </div>
     </div>
     <div class="col-sm-4">
